all.yml
apiVersion: v1
kind: Service
metadata:
  name: digitransit-proxy
spec:
  selector:
    app: digitransit-proxy
  ports:
  - name: http
    protocol: TCP
    # fallback, will be removed soon:
    port: 8080
    targetPort: 8080
  externalIPs:
  - 192.168.10.170
---
apiVersion: v1
kind: Service
metadata:
  name: hsl-map-server
spec:
  selector:
    app: hsl-map-server
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: graphiql
spec:
  selector:
    app: graphiql
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: photon-pelias-adapter
spec:
  selector:
    app: photon-pelias-adapter
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: digitransit-ui-vsh
spec:
  selector:
    app: digitransit-ui
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: opentripplanner-data-con-vsh
spec:
  selector:
    app: opentripplanner-data-container-vsh
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: opentripplanner-vsh
spec:
  selector:
    app: opentripplanner
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentripplanner-data-container-vsh
  labels:
    app: opentripplanner-data-container-vsh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentripplanner-data-container-vsh
  template:
    metadata:
      labels:
        app: opentripplanner-data-container-vsh
    spec:
      containers:
      - name: opentripplanner-data-container-vsh
        image: verschwoerhaus/opentripplanner-data-container-vsh:2020-01-22-latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentripplanner
  labels:
    app: opentripplanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentripplanner
  template:
    metadata:
      labels:
        app: opentripplanner
    spec:
      containers:
      - name: opentripplanner
        image: hsldevcom/opentripplanner:da7ca2a4d5a8cb381cd64efc6df5ba4252d45440
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitransit-ui
  labels:
    app: digitransit-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitransit-ui
  template:
    metadata:
      labels:
        app: digitransit-ui
    spec:
      containers:
      - name: digitransit-ui
        image: verschwoerhaus/digitransit-ui:1172406
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hsl-map-server
  labels:
    app: hsl-map-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hsl-map-server
  template:
    metadata:
      labels:
        app: hsl-map-server
    spec:
      containers:
      - name: hsl-map-server
        image: verschwoerhaus/hsl-map-server:b4adf23
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphiql
  labels:
    app: graphiql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphiql
  template:
    metadata:
      labels:
        app: graphiql
    spec:
      containers:
      - name: graphiql
        image: verschwoerhaus/graphiql:2019-10-30
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photon-pelias-adapter
  labels:
    app: photon-pelias-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photon-pelias-adapter
  template:
    metadata:
      labels:
        app: photon-pelias-adapter
    spec:
      containers:
      - name: photon-pelias-adapter
        image: stadtulm/photon-pelias-adapter:5903fc0
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitransit-proxy
  labels:
    app: digitransit-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitransit-proxy
  template:
    metadata:
      labels:
        app: digitransit-proxy
    spec:
      containers:
      - name: digitransit-proxy
        image: verschwoerhaus/digitransit-proxy-vsh:01671d2
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
