ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digitransit
spec:
  rules:
  - host: digitransit.im.verschwoerhaus.de
    http:
      paths:
      - path: /
        backend:
          serviceName: digitransit-ui
          servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digitransit-api
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "7200"
spec:
  rules:
  - host: api.digitransit.im.verschwoerhaus.de
    http:
      paths:
      - path: /map/v1
        backend:
          serviceName: hsl-map-server
          servicePort: 8080
      - path: /graphiql
        backend:
          serviceName: graphiql
          servicePort: 8080
      - path: /swu-ladesaeulen/v1
        backend:
          serviceName: swu-ladesaeulen
          servicePort: 8080

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digitransit-api-geocoding
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /v1/$2
spec:
  rules:
  - host: api.digitransit.im.verschwoerhaus.de
    http:
      paths:
      - path: /geocoding/v1(/|$)(.*)
        backend:
          serviceName: photon-pelias-adapter
          servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digitransit-api-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /otp/$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,OTPTimeout,id"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "7200"
spec:
  rules:
  - host: api.digitransit.im.verschwoerhaus.de
    http:
      paths:
      - path: /routing/v1(/|$)(.*)
        backend:
          serviceName: opentripplanner
          servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digitransit-api-data
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "7200"
spec:
  rules:
  - host: api.digitransit.im.verschwoerhaus.de
    http:
      paths:
      - path: /routing-data/v2/vsh
        backend:
          serviceName: opentripplanner-data-container
          servicePort: 8080
